--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "hemiframe/php-websocket",
     "description": "PHP WebSocket server and client library",
-    "version": "1.5.3",
+    "version": "1.6.1",
     "keywords": [
         "WebSockets",
         "Server",
@@ -10,13 +10,11 @@
         "WebSocket"
     ],
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Martin",
-            "email": "heminei@heminei.com",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "Martin",
+        "email": "heminei@heminei.com",
+        "role": "Developer"
+    }],
     "support": {
         "issues": "https://github.com/heminei/php-websocket/issues"
     },
